objects/TestObject__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiTest__c</fullName>
        <label>MultiTest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>TestObject</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>TestObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>